# contact_graspnet

./: .gitignore  setup.cfg
contact_graspnet/: contact_grasp_estimator.py  data.py  inference.py  mesh_utils.py  scene_renderer.py  tf_train_ops.py
