[metadata]
name = contact_graspnet
version = 0.0.1
author = Tim Player
author_email = playert@oregonstate.edu
description = Fork of contact-graspnet (Sundermeyer et. al 2021) with pip setup.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/playertr/contact_graspnet
project_urls =
    Bug Tracker = https://github.com/playertr/contact_graspnet/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
include_package_data = True